@@ -3,6 +3,7 @@ OpenLDAP 2.3 Change Log
 OpenLDAP 2.3.26 Engineering
 	Fixed slapd incorrect rebuilding of replica URI (ITS#4633)
 	Fixed back-monitor operations order via callbacks (ITS#4631)
+	Fixed libldap dnssrv bug with "not present" positive statement (ITS#4610)
 
 OpenLDAP 2.3.25 Release
 	Fixed liblber ber_bvreplace_x argument checks
